Changes done to email function

--- a/templates/post.html
+++ b/templates/post.html
@@ -11,8 +11,8 @@
                             <h2>{{post.tagline}}</h2>
                             <span class="meta">
                                 Posted by
-                                <a href="#!">Start Bootstrap</a>
-                                on August 24, 2023
+                                <a href="#!">Admin</a>
+                                on {{post.date}}
                             </span>
                         </div>
                     </div>
